Fixed overlap

--- a/src/sections/about/about.scss
+++ b/src/sections/about/about.scss
@@ -7,7 +7,7 @@
   align-items: center;
 
   &__text {
-    margin-top: 100px;
+    margin-top: 10r0px;
     padding: 4rem;
     display: block;
     width: 100%;
